added authentication stuff
